# BackTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_project.sh
data/: 600519.csv  stock_data.csv
include/: DataLoader.h  PortfolioManager.h  StatisticsModule.h  Strategy.h  TradeExecutor.h
include/utils/: timestamp.h
logs/: build_log.txt  trade_log.txt
src/: CMakeLists.txt  DataLoader.cpp  PortfolioManager.cpp  StatisticsModule.cpp  Strategy.cpp  TradeExecutor.cpp
src/utils/: timestamp.cpp
test/: CMakeLists.txt  DataLoaderTest.cpp  PortfolioManagerTest.cpp  StatisticsModuleTest.cpp  StrategyTest.cpp  TradeExecutorTest.cpp  test_main.cpp
